--- a/src/components/Countdown.module.css
+++ b/src/components/Countdown.module.css
@@ -51,6 +51,9 @@
   -webkit-text-fill-color: transparent;
   background-clip: text;
   font-weight: 400;
+  display: inline-block;
+  min-width: 80px;
+  text-align: center;
 }
 
 .countdownLabel {
