--- a/src/components/YoutubePlayer.module.css
+++ b/src/components/YoutubePlayer.module.css
@@ -21,6 +21,11 @@
   height: 100%;
   cursor: pointer;
   overflow: hidden;
+  padding: 0;
+  border: none;
+  background: none;
+  display: block;
+  text-align: left;
 }
 
 .thumbnail {
